--- a/package.json
+++ b/package.json
@@ -55,9 +55,12 @@
     "@evilmartians/lefthook": "^1.2.2",
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
+    "@testing-library/jest-native": "^5.4.1",
+    "@testing-library/react-native": "^11.5.2",
     "@types/jest": "^28.1.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "0.70.0",
+    "@types/react-test-renderer": "^18.0.0",
     "commitlint": "^17.0.2",
     "del-cli": "^5.0.0",
     "eslint": "^8.4.1",
@@ -71,7 +74,9 @@
     "react-native-builder-bob": "^0.20.3",
     "react-native-gesture-handler": "2.8",
     "react-native-reanimated": "2.12",
+    "react-test-renderer": "^18.2.0",
     "release-it": "^15.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.5.2"
   },
   "resolutions": {
@@ -80,20 +85,12 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-reanimated": "~2.12.0"
+    "react-native-gesture-handler": "~2.8.0"
   },
   "engines": {
     "node": ">= 16.0.0"
   },
   "packageManager": "^yarn@1.22.15",
-  "jest": {
-    "preset": "react-native",
-    "modulePathIgnorePatterns": [
-      "<rootDir>/example/node_modules",
-      "<rootDir>/lib/"
-    ]
-  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
@@ -159,5 +156,6 @@
         }
       ]
     ]
-  }
+  },
+  "dependencies": {}
 }
