--- a/package.json
+++ b/package.json
@@ -72,8 +72,6 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-builder-bob": "^0.20.3",
-    "react-native-gesture-handler": "2.8",
-    "react-native-reanimated": "2.12",
     "react-test-renderer": "^18.2.0",
     "release-it": "^15.0.0",
     "ts-node": "^10.9.1",
@@ -84,8 +82,7 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*",
-    "react-native-gesture-handler": "~2.8.0"
+    "react-native": "*"
   },
   "engines": {
     "node": ">= 16.0.0"
